Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       <h3>
 <a id="analyzing-senior-theses" class="anchor" href="#analyzing-senior-theses" aria-hidden="true"><span class="octicon octicon-link"></span></a>Analyzing Senior Theses</h3>
 
+<p>Past senior theses were obtained from the Tufts Digital Library archive. They were divided into subject (Biology, Psychology, Economics, English, and International Relations) and analyzed.</p>
+
+<p><img src="https://github.com/denalirao/thesis-Visualizations/blob/master/final%20visualizations.pdf" alt="Visualizations"></p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/denalirao/thesis-Visualizations">Senior Thesis Visualizations</a> is maintained by <a href="https://github.com/denalirao">denalirao</a>.</span>
 
