Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
 
 <p>Past senior theses were obtained from the Tufts Digital Library archive. They were divided into subject (Biology, Psychology, Economics, English, and International Relations) and analyzed.</p>
 
-<p><img src="https://docs.google.com/viewer?url=%24%7Bhttps://github.com/denalirao/thesis-Visualizations/blob/master/final%20visualizations.pdf%7D" alt="vis"></p>
-
-<p><img src="https://github.com/denalirao/thesis-Visualizations/blob/master/final%20visualizations.pdf" alt="Visualizations">
-<img src="https://github.com/denalirao/thesis-Visualizations/final%20visualizations.pdf" alt="Visualizations"></p>
+<p><img src="thesis-Visualizations/final%20visualizations/final%20visualizations.001.jpg" alt="Visualizations"></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/denalirao/thesis-Visualizations">Senior Thesis Visualizations</a> is maintained by <a href="https://github.com/denalirao">denalirao</a>.</span>
