Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
 
 <p>Past senior theses were obtained from the Tufts Digital Library archive. They were divided into subject (Biology, Psychology, Economics, English, and International Relations) and analyzed.</p>
 
-<p><img src="thesis-Visualizations/final%20visualizations/final%20visualizations.001.jpg" alt="Visualizations"></p>
+<p><img src="thesis-Visualizations/final%20visualizations/final%20visualizations.001.jpg" alt="Visualizations">
+<img src="thesis-Visualizations/final%20visualizations/final%20visualizations.002.jpg" alt="Visualizations">
+<img src="thesis-Visualizations/final%20visualizations/final%20visualizations.003.jpg" alt="Visualizations">
+<img src="thesis-Visualizations/final%20visualizations/final%20visualizations.004.jpg" alt="Visualizations">
+<img src="thesis-Visualizations/final%20visualizations/final%20visualizations.005.jpg" alt="Visualizations">
+<img src="thesis-Visualizations/final%20visualizations/final%20visualizations.006.jpg" alt="Visualizations">
+<img src="thesis-Visualizations/final%20visualizations/final%20visualizations.007.jpg" alt="Visualizations">
+<img src="thesis-Visualizations/final%20visualizations/final%20visualizations.008.jpg" alt="Visualizations">
+<img src="thesis-Visualizations/final%20visualizations/final%20visualizations.009.jpg" alt="Visualizations">
+<img src="thesis-Visualizations/final%20visualizations/final%20visualizations.010.jpg" alt="Visualizations">
+<img src="thesis-Visualizations/final%20visualizations/final%20visualizations.011.jpg" alt="Visualizations"></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/denalirao/thesis-Visualizations">Senior Thesis Visualizations</a> is maintained by <a href="https://github.com/denalirao">denalirao</a>.</span>
