--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <p>Past senior theses were obtained from the Tufts Digital Library archive. They were divided into subject (Biology, Psychology, Economics, English, and International Relations) and analyzed.</p>
 
-<p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.001.jpg" height="400" width="500"></p>
+<p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.001.jpg" height="50%" width="50%"></p>
 
 <p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.002.jpg" height="400" width="500">
 <img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.003.jpg" height="400" width="500"></p>
@@ -36,7 +36,7 @@
 <img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.008.jpg" height="400" width="500">
 <img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.009.jpg" height="400" width="500">
 <img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.010.jpg" height="400" width="500">
-<img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.011.jpg" height="400" width="500"></p>
+<img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.013.jpg" height="400" width="500"></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/denalirao/thesis-Visualizations">Senior Thesis Visualizations</a> is maintained by <a href="https://github.com/denalirao">denalirao</a>.</span>
