--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 <p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.001.jpg" height="50%" width="50%"></p>
 
-<p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.002.jpg" height="400" width="500">
-<img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.003.jpg" height="400" width="500"></p>
+<p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.002.jpg" height="60%" width="60%">
+<img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.003.jpg" height="70%" width="70%"></p>
 
 <p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.004.jpg" height="400" width="500">
 <img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.005.jpg" height="400" width="500">
