--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <p>Past senior theses were obtained from the Tufts Digital Library archive. They were divided into subject (Biology, Psychology, Economics, English, and International Relations) and analyzed.</p>
 
-<p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.001.jpg" height="50%" width="50%"></p>
+<p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.001.jpg" height="600" width="750"></p>
 
 <p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.002.jpg" height="60%" width="60%">
 <img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.003.jpg" height="70%" width="70%"></p>
