--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
 <img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.003.jpg" height="600" width="750"></p>
 
 <p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.004.jpg" height="600" width="750">
-<img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.005.jpg" height="600" width="750">
-<img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.006.jpg" height="600" width="750">
+<img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.005.jpg" height="600" width="750"></p>
+
+<p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.013.jpg" height="600" width="750"></p>
+
+<p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.006.jpg" height="600" width="750">
 <img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.007.jpg" height="600" width="750">
 <img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.008.jpg" height="600" width="750">
 <img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.009.jpg" height="600" width="750">
-<img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.010.jpg" height="600" width="750">
-<img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.013.jpg" height="600" width="750"></p>
+<img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.010.jpg" height="600" width="750"></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/denalirao/thesis-Visualizations">Senior Thesis Visualizations</a> is maintained by <a href="https://github.com/denalirao">denalirao</a>.</span>
