--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <p>Past senior theses were obtained from the Tufts Digital Library archive. They were divided into subject (Biology, Psychology, Economics, English, and International Relations) and analyzed.</p>
 
-<p>In general, thesis appear to have similar structure across department, but disciplines differ in magnitude. That is, Biology and Economics theses use longer words than average, and IR and English theses are much longer than average thesis from Tufts.</p>
+<p>In general, theses appear to have similar structure across department, but disciplines differ in magnitude. That is, Biology and Economics theses use longer words than average, and IR and English theses are much longer than average thesis from Tufts.</p>
 
 <p><img src="https://raw.githubusercontent.com/denalirao/thesis-Visualizations/master/final%20visualizations/final%20visualizations.001.jpg" height="600" width="750"></p>
 
